fix spacing

--- a/src/components/Event/event.scss
+++ b/src/components/Event/event.scss
@@ -7,9 +7,6 @@
   min-height: 135px;
   box-sizing: border-box;
   padding-top: 45px;
-  &:first-child {
-    padding-top: 0;
-  }
   &::after {
     display: block;
     content: ' ';
@@ -19,6 +16,10 @@
     right: 45px;
     bottom: 0;
     height: 0;
+  }
+  &.height90 {
+    min-height: 90px;
+    padding: 5px 0 0 0;
   }
   .time {
     line-height: 45px;
@@ -177,6 +178,9 @@
     flex-direction: column;
     padding-top: 0;
     min-height: 225px;
+    &.height90 {
+      flex-direction: row;
+    }
     &.height135 {
       min-height: 135px;
     }
